renamed atom-sharp to atom-sharper, also renamed events to be slightly more consistent, moved files into folders

--- a/stylesheets/atom-sharper.less
+++ b/stylesheets/atom-sharper.less
@@ -5,10 +5,10 @@
 @import "ui-variables";
 @import "octicon-mixins";
 
-.atom-sharp {
+.atom-sharper {
 }
 
-.atom-sharp-output {
+.atom-sharper-output {
   .message {
     max-height: 150px;
     overflow-y: scroll;
