--- a/stylesheets/atom-sharper.less
+++ b/stylesheets/atom-sharper.less
@@ -9,7 +9,15 @@
   position:relative;
   padding:0px !important;
   margin:0px;
+
+  .background-message {
+    color:  @text-color-subtle;
+  }
 }
+
+.error-output-pane {
+}
+
 .atom-sharper-output-resizer{
   position:absolute;
   height:5px;
@@ -25,21 +33,26 @@
 }
 .border-flip (@a) when (lightness(@a) < 50%) {
   border: 1px solid lighten(@tool-panel-background-color, 20%);
-  border-top: 1px solid transparent;
 }
-
+.atom-sharper-button {
+  progress {
+    margin-top:3px;
+    width:40px;
+  }
+}
 .btn-fix {
   top: -2px !important;
 }
 .atom-sharper-output {
   overflow-y: scroll;
   height:150px;
-
+  position:relative;
   .error-table {
     width:100%;
     line-height: 1.42;
     th {
       .border-flip(@tool-panel-background-color);
+      border-top: 1px solid transparent;
       padding:2px;
       padding-top:0px;
     }
