When the server is not running show a nice message on the pane how to start the server, when its loading show a progress indicator

--- a/stylesheets/atom-sharper.less
+++ b/stylesheets/atom-sharper.less
@@ -12,6 +12,9 @@
 
   .background-message {
     color:  @text-color-subtle;
+    kbd {
+      font-size:inherit;
+    }
   }
 }
 
@@ -42,6 +45,10 @@
 }
 .btn-fix {
   top: -2px !important;
+}
+.messages-container {
+  height:150px;
+  overflow-y: scroll;
 }
 .atom-sharper-output {
   overflow-y: scroll;
