--- a/stylesheets/atom-sharper.less
+++ b/stylesheets/atom-sharper.less
@@ -101,22 +101,31 @@
 @green-color: @syntax-color-added;
 @blue-color: @syntax-color-renamed;
 
-.highlight-blue .region {
-  background-image: url('atom://atom-sharper/stylesheets/wiggle-blue.png');
+.highlight-green .region {
+  background-image: url('atom://atom-sharper/stylesheets/wiggle-green.png');
   background-repeat: repeat-x;
   background-position: bottom;
+  margin-top: 3px;
 }
 .highlight-red .region {
   background-image: url('atom://atom-sharper/stylesheets/wiggle.png');
   background-repeat: repeat-x;
   background-position: bottom;
+  margin-top: 3px;
 }
 
 .gutter {
   .gutter-red {
-    background-color: @background-color-error !important;
+
+  background-color: rgba(red(@background-color-error), green(@background-color-error), blue(@background-color-error), 0.3) !important;
+  background-image: url('atom://atom-sharper/stylesheets/wiggle.png');
+  background-repeat: repeat-x;
+  background-position: bottom;
   }
-  .gutter-blue {
-    background-color: @background-color-info !important;
+  .gutter-green {
+  background-color: rgba(red(@background-color-success), green(@background-color-success), blue(@background-color-success), 0.3) !important;
+  background-image: url('atom://atom-sharper/stylesheets/wiggle-green.png');
+  background-repeat: repeat-x;
+  background-position: bottom;
   }
 }
