--- a/stylesheets/atom-sharper.less
+++ b/stylesheets/atom-sharper.less
@@ -5,7 +5,7 @@
 @import "ui-variables";
 @import "octicon-mixins";
 
-.atom-sharper-pane {
+.omnisharp-atom-pane {
   position:relative;
   padding:0px !important;
   margin:0px;
@@ -21,7 +21,7 @@
 .error-output-pane {
 }
 
-.atom-sharper-output-resizer{
+.omnisharp-atom-output-resizer{
   position:absolute;
   height:5px;
   cursor: row-resize;
@@ -37,7 +37,7 @@
 .border-flip (@a) when (lightness(@a) < 50%) {
   border: 1px solid lighten(@tool-panel-background-color, 20%);
 }
-.atom-sharper-button {
+.omnisharp-atom-button {
   progress {
     margin-top:3px;
     width:40px;
@@ -50,7 +50,7 @@
   height:150px;
   overflow-y: scroll;
 }
-.atom-sharper-output {
+.omnisharp-atom-output {
   overflow-y: scroll;
   height:150px;
   position:relative;
@@ -102,13 +102,13 @@
 @blue-color: @syntax-color-renamed;
 
 .highlight-green .region {
-  background-image: url('atom://atom-sharper/stylesheets/wiggle-green.png');
+  background-image: url('atom://omnisharp-atom/stylesheets/wiggle-green.png');
   background-repeat: repeat-x;
   background-position: bottom;
   margin-top: 3px;
 }
 .highlight-red .region {
-  background-image: url('atom://atom-sharper/stylesheets/wiggle.png');
+  background-image: url('atom://omnisharp-atom/stylesheets/wiggle.png');
   background-repeat: repeat-x;
   background-position: bottom;
   margin-top: 3px;
@@ -118,13 +118,13 @@
   .gutter-red {
 
   background-color: rgba(red(@background-color-error), green(@background-color-error), blue(@background-color-error), 0.3) !important;
-  background-image: url('atom://atom-sharper/stylesheets/wiggle.png');
+  background-image: url('atom://omnisharp-atom/stylesheets/wiggle.png');
   background-repeat: repeat-x;
   background-position: bottom;
   }
   .gutter-green {
   background-color: rgba(red(@background-color-success), green(@background-color-success), blue(@background-color-success), 0.3) !important;
-  background-image: url('atom://atom-sharper/stylesheets/wiggle-green.png');
+  background-image: url('atom://omnisharp-atom/stylesheets/wiggle-green.png');
   background-repeat: repeat-x;
   background-position: bottom;
   }
