adds build capability (for msbuild/xbuild style projects or solutions).   output is displayed in build output pane, errors lines/messages in the output are clickable and navigate to error via `omni:navigate-to`

--- a/stylesheets/omnisharp-atom.less
+++ b/stylesheets/omnisharp-atom.less
@@ -21,6 +21,16 @@
 .error-output-pane {
 }
 
+.build-output-pane-view {
+  .navigate-link {
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
 .omnisharp-atom-output-resizer{
   position:absolute;
   height:5px;
