colorize log omnisharp output

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -107,13 +107,13 @@
     padding: 0px;
     border:none;
   }
-  .pending {
+  .pending, .WARNING {
     color: @text-color-warning;
   }
   .success {
     color: @text-color-success;
   }
-  .fail {
+  .fail, .ERROR {
     color: @text-color-error;
   }
 }
