--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -48,10 +48,18 @@
   border: 1px solid lighten(@tool-panel-background-color, 20%);
 }
 .omnisharp-atom-button {
-  progress {
-    margin-top:3px;
-    width:40px;
+  .icon-flame-loading {
+    color: rgba(156, 164, 180, 0.6);
+    -webkit-animation: loading 1s linear infinite alternate;
   }
+}
+@-webkit-keyframes loading {
+    from {
+      color: rgba(156, 164, 180, 0.3);
+    }
+    to {
+      color: rgba(156, 164, 180, 1);
+    }
 }
 .btn-fix {
   top: -2px !important;
