--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -187,3 +187,24 @@ li.autocomplete-omnisharp-atom .icon {
 li.autocomplete-omnisharp-atom {
     line-height:1.5em !important;
 }
+
+.error-warning-summary {
+    padding-left: 10px;
+    cursor:pointer;
+    &:focus {
+        text-decoration: none;
+        color: #c8d5ee;
+    }
+    &:hover {
+        text-decoration: none;
+    }
+    span {
+        padding-left: 5px;
+    }
+    .icon-issue-opened {
+        color: @red-color;
+    }
+    .icon-alert {
+        color: #e2c08d;
+    }
+}
