Use UI Theme background color for pane colors to be more consistent

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -109,7 +109,7 @@
   }
 
   pre {
-    background: #161719;
+    background: @base-background-color;
     font-size: 10px;
     margin: 0px;
     padding: 0px;
@@ -128,7 +128,7 @@
 
 .codecheck {
     padding-left: 20px;
-    background-color: #161719;
+    background-color: @base-background-color;
 
     &.Hidden, &.Warning {
         background-image: url('atom://omnisharp-atom/styles/icons/codecheck-warning.png');
