Fixed issue with CSP

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -183,7 +183,7 @@
         }
     }
 }
-.codecheck {
+.codecheck-output-pane {
     padding-left: 20px !important;
     background-color: @base-background-color;
     &.Hidden,
@@ -192,7 +192,7 @@
         background-repeat: no-repeat;
         background-position: 2px 14px;
     }
-    &.Error {
+    .Error {
         background-image: url("atom://omnisharp-atom/styles/icons/codecheck-error.png");
         background-repeat: no-repeat;
         background-position: 2px 14px;
