Adding symbol lookup

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -215,3 +215,12 @@ li.autocomplete-omnisharp-atom {
         color: @text-color-warning;
     }
 }
+
+span.filename {
+    color: #666;
+}
+
+li.selected span.filename {
+    text-shadow: none;
+    color: #AAA;
+}
