Added framework selector, tweaked highlighting support

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -316,3 +316,7 @@ li.selected span.filename {
         background-position: right center;
     }
 }
+.framework-selector a,
+.framework-selector a:hover {
+  color: @text-color;
+}
