Fixed an issue with lightbulbs not showing up, with some atom packages installed.  Fixed an issue in view-model throwing an error if no output was recieved.  Fixed a problem in code lens when the editor had been destroyed

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -334,6 +334,7 @@ li.selected span.filename {
         background-size: 3px;
         background-repeat: no-repeat;
         background-position: right center;
+        width: inherit !important;
     }
 }
 
