Hide status bar elements more as needed

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -388,6 +388,10 @@ li.autocomplete-omnisharp-atom {
     }
 }
 
+.status-bar omnisharp-status-bar .inline-block {
+    margin-right: 0;
+}
+
 span.filename {
     color: #666;
 }
