Added signature help first draft

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -520,3 +520,9 @@ body atom-text-editor.autocomplete-active {
 atom-text-editor::shadow.autocomplete-active .linter-highlight{
         display:none;
 }
+
+omnisharp-signature-help {
+    bottom: 0;
+    position: relative !important;
+    opacity: 1 !important;
+}
